# pq-vault2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REPORT.md
.github/workflows/: android.yml  build.yml  release.yml  windows.yml
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  pqvault_jni.cpp
android/app/src/main/java/com/quantvault/app/: MainActivity.kt  PQVaultApplication.kt
android/app/src/main/java/com/quantvault/app/data/auth/: FirebaseAuthManager.kt  MockAuthManager.kt
android/app/src/main/java/com/quantvault/app/data/local/: EncryptedVaultEntry.kt  HardwareKeyManager.kt  NativeVault.kt  SecurePreferences.kt
android/app/src/main/java/com/quantvault/app/data/repository/: TOTPRepository.kt  VaultRepository.kt
android/app/src/main/java/com/quantvault/app/data/sync/: MutualAuthenticator.kt  PFSKeyManager.kt  QRCodeGenerator.kt  SyncRepository.kt
android/app/src/main/java/com/quantvault/app/di/: AppModule.kt
android/app/src/main/java/com/quantvault/app/security/: SecurityModule.kt  TamperDetector.kt
android/app/src/main/java/com/quantvault/app/ui/: PQVaultApp.kt
android/app/src/main/java/com/quantvault/app/ui/components/: BottomNavBar.kt  GlassCard.kt  OAuthButtons.kt
android/app/src/main/java/com/quantvault/app/ui/screens/auth/: AuthViewModel.kt  LoginScreen.kt
android/app/src/main/java/com/quantvault/app/ui/screens/authenticator/: AuthenticatorScreen.kt
android/app/src/main/java/com/quantvault/app/ui/screens/settings/: SettingsScreen.kt
android/app/src/main/java/com/quantvault/app/ui/screens/sync/: SyncScreen.kt
android/app/src/main/java/com/quantvault/app/ui/screens/vault/: VaultScreen.kt
android/app/src/main/java/com/quantvault/app/ui/theme/: Color.kt  Theme.kt  Typography.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/drawable-hdpi/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: autofill_service.xml
docs/: TECHNICAL_REPORT.md
securevault-core/: Cargo.toml
securevault-core/src/: error.rs  generator.rs  lib.rs  oauth.rs  securemem.rs
securevault-core/src/autofill/: matcher.rs  mod.rs
securevault-core/src/behavior/: analyzer.rs  gesture.rs  keystroke.rs  mod.rs  privacy.rs  profile.rs
securevault-core/src/crypto/: aes.rs  chacha20.rs  kdf.rs  ml_dsa.rs  ml_kem.rs  mod.rs  rng.rs  sha3.rs
securevault-core/src/hardware/: mod.rs  tpm.rs
securevault-core/src/passkey/: authenticate.rs  mod.rs  register.rs
securevault-core/src/sync/: mod.rs  p2p.rs
securevault-core/src/totp/: generator.rs  mod.rs  parser.rs
securevault-core/src/vault/: crypto.rs  entry.rs  mod.rs
windows/: index.html  package.json  tailwind.config.js  vite.config.ts
windows/src/: App.tsx
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/src/: commands.rs  lib.rs  main.rs  security.rs  vault.rs
windows/src/components/: AuthenticatorPanel.tsx  PasswordGenerator.tsx
windows/src/hooks/: usePasswordGenerator.ts  useVault.ts
windows/src/lib/: secureVault.ts
