[package]
name = "pq-vault"
version = "1.0.0"
description = "PQ Vault Desktop App"
authors = ["PQ Vault Team"]
edition = "2021"

[lib]
name = "pq_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
thiserror = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true